# lightfall-pystxmcontrol

./: .gitignore  LEGAL.md  LICENSE.md  NOTES-environment.md  README.md  pyproject.toml
docs/superpowers/: 2026-07-12-caproto-iocs-followups.md  2026-07-13-epics-migration-followups.md  2026-07-13-remote-gui-followups.md  PHASE-A-FOLLOWUPS.md
docs/superpowers/plans/: 2026-06-23-pystxmcontrol-flyscan.md  2026-06-25-lightfall-streaming-viz-stxm-map.md  2026-06-25-pystxmcontrol-flyscan-ui.md  2026-07-07-stxm-energy-stack-phase-a.md  2026-07-09-stxm-live-nats-analysis.md  2026-07-11-lightfall-remote-control-api.md  2026-07-11-remote-control-api-followups.md  2026-07-12-lightfall-epics-migration.md  2026-07-12-pystxmcontrol-caproto-iocs.md  2026-07-13-pystxmcontrol-remote-gui.md
docs/superpowers/specs/: 2026-06-23-pystxmcontrol-flyscan-design.md  (+9 more)
scripts/: build_pystxm_happi_db.py  make_golden_fixture.py  smoke_energy_stack.py  smoke_flyscan_lightfall.py  smoke_flyscan_ui.py  smoke_getline.py  smoke_gridscan.py  smoke_lightfall.py  smoke_plan_ui.py  smoke_raw.py  smoke_stxm_live_map.py
src/lightfall_pystxmcontrol/: __init__.py  backend.py  config.py  contract.py  devices.py  energy_ranges.py  epics_env.py  flyer.py  image_render.py  manifest.py  plan_plugin.py  plans.py  plugin.py  pystxm_happi.json  scan_panel.py  sim_daq.json  sim_motor.json  stxm_analysis_client.py  stxm_binder.py  stxm_map_viz.py  stxm_spectrum_panel.py  stxm_stack_viz.py
tests/: conftest.py  test_agent_plugins.py  test_axis.py  test_backend.py  test_backend_flyer.py  test_config.py  test_contract.py  test_counter.py  test_devices_epics.py  test_e2e_plans_epics.py  test_energy_axis.py  test_energy_ranges.py  test_energy_stack_plan.py  test_energy_stack_plugin.py  test_epics_fixture.py  test_fly_raster.py  test_flyer.py  test_flyer_epics.py  test_flyer_keys.py  test_golden_fixture.py  test_grid_scan.py  test_happi_async_connect.py  test_happi_db.py  test_happi_entry_shape.py  test_plan_plugin.py  test_plugin_backend.py  test_plugin_integration.py  test_scan_panel.py  test_stxm_analysis_client.py  test_stxm_binder.py  test_stxm_map_viz.py  test_stxm_spectrum_panel.py  test_stxm_stack_viz.py
tests/fixtures/: golden_energy_stack_run.json
(+18 files in other folders)
